Fix logo dropshadow that was cut off

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -94,8 +94,6 @@
 header {
 	grid-area: h;
 	display: flex;
-	overflow-y: hidden;
-	overflow-x: visible;
 	margin-right: -15px;
 }
 
